# dataflow

./: .astylerc  .gitignore  CMakeLists.txt  README.md  format-code.sh  ppm_sample.xml  sample.xml
Basic_math/: Basic_math.sln
Basic_math/Basic_math/: Basic_math.cpp  Basic_math.h  Basic_math.vcxproj  Basic_math.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h
Data_repository/: Data_repository.sln
Data_repository/Data_repository/: Data_repository.cpp  Data_repository.h  Data_repository.vcxproj  Data_repository.vcxproj.filters  Flow_data_ptr.h  main.cpp
Dataflow_UI/: arrow.cpp  arrow.h  dataflow.pro  diagrammoduleitem.cpp  diagrammoduleitem.h  diagramscene.cpp  diagramscene.h  main.cpp  mainwindow.cpp  mainwindow.h  module.cpp  moduleslistmodel.cpp  moduleslistmodel.h
Module_loader/: Module_loader.sln
Module_loader/Module_loader/: Dll_loader.cpp  Dll_loader.h  Module_loader.h  Module_loader.vcxproj  Module_loader.vcxproj.filters  main.cpp
basicmath/: CMakeLists.txt  basicmath.cpp  basicmath.h
dstring/: CMakeLists.txt  dstring.cpp  dstring.h
filters/: blur_filter.txt  sharpen_filter.txt  sobel_filter.txt
gui/: Arrow.cpp  Arrow.h  BlockDescription.cpp  BlockDescription.h  BlockIn.cpp  BlockIn.h  BlockOut.cpp  BlockOut.h  CMakeLists.txt  DiagramBlock.cpp  DiagramBlock.h  DiagramConstructor.cpp  DiagramConstructor.h  DiagramModuleItem.cpp  DiagramModuleItem.h  DiagramOperation.cpp  DiagramOperation.h  DiagramScene.cpp  DiagramScene.h  DiagramScene.qrc  MainWindow.cpp  MainWindow.h  Module.cpp  Module.h  ModuleDescription.cpp  ModuleDescription.h  ModuleIn.cpp  ModuleIn.h  ModuleOut.cpp  ModuleOut.h  ModulesListModel.cpp  ModulesListModel.h  ModulesPanelItem.cpp  ModulesPanelItem.h  ModulesPanelModel.cpp  ModulesPanelModel.h  PreferencesDialog.cpp  PreferencesDialog.h  main.cpp
include/: dataflow.h
interpreter/: BlockVisitor.h  CMakeLists.txt  DataflowModel.h  Datastore.cpp  Datastore.h  DllLoader.cpp  DllLoader.h  Interpreter.cpp  Interpreter.h  Library.cpp  Library.h  LibraryLoader.cpp  LibraryLoader.h  ManagedMemoryChunk.cpp  ManagedMemoryChunk.h  ModelManipulator.cpp  ModelManipulator.h  ModuleLoader.h  XMLParser.cpp  XMLParser.h  datastore_example.cpp  dllloader_example.cpp  interpreter_example.cpp  library_loading.cpp  library_loading.h  libraryloader_example.cpp  managed_memory_chunk.cpp  managed_memory_chunk.h  stored_ptr.h  xmlparser_example.cpp
io_module/: CMakeLists.txt  io_module.cpp  io_module.h
ppm/: CMakeLists.txt  ppm.cpp  ppm.h
